@@ -21,16 +21,16 @@ AUX make-3.82-oneshell.patch 931 RMD160 2bdc4650604418813f6110dd0eca35a1b7062027
 AUX make-3.82-parallel-remake.patch 1422 RMD160 095e45fca2ccc3a3fc601b2f74b674b53d720332 SHA1 392189ac7b05b2cc6627f4544fb619f6db587653 SHA256 e2b63a63a44fb692798d237f888ad35a0899144fc5c6700270dee8ee455ac231
 DIST make-3.81.tar.bz2 1151445 RMD160 79d418e1258ec0d6ba08b1431a4ade3fec54c2b2 SHA1 41ed86d941b9c8025aee45db56c0283169dcab3d SHA256 f3e69023771e23908f5d5592954d8271d3d6af09693cecfd29cee6fde8550dc8
 DIST make-3.82.tar.bz2 1242186 RMD160 e3d1f7019549553b9fc7a88884c9b85d25a60d21 SHA1 b8a8a99e4cb636a213aad3816dda827a92b9bbed SHA256 e2c1a73f179c40c71e2fe8abf8a8a0688b8499538512984da4a76958d0402966
-EBUILD make-3.81-r1.ebuild 2536 RMD160 679c5c11264b3eddc181dbbebc6d85f282e52d99 SHA1 86a93e19c97d79355ea019feae50ffcd203c91ab SHA256 a757d2e0684377a146cf7d54617fbd665363b13fb20c54ab07b1a9b969d6750c
-EBUILD make-3.81-r2.ebuild 2645 RMD160 abc899e8ff52ef3be66c4b2ddf571cc7af123a82 SHA1 fe56bdc2cdfb47f9a8a3c2676bf80d9fd2be2650 SHA256 d34a9630e23ddcf204896cd595aa813b4a0ce4794c588294e645d0b64845d91c
+EBUILD make-3.81-r1.ebuild 2543 RMD160 bc559f9b29b96bf19c4342e78d233c5bbc53247f SHA1 b8162c3b4d4241963d4ce3ede20e4be2f8b7cb9d SHA256 f9fd7756cf918b6413629505b84542b285bddfaa24e62fb68bf892dd3335569c
+EBUILD make-3.81-r2.ebuild 2652 RMD160 e55f4d0b58eae90ea407b9e50097b8dec8b23ede SHA1 97c6dfb7c22b6ad838e64f9edd6d5edf5ce45e93 SHA256 1740b32b5ce70283dbe14320663687bb10aa01ca9c8302c9075cc5b154f31df6
 EBUILD make-3.82-r4.ebuild 1788 RMD160 6dcfd8577230b5d3754756c3f2cdf1b224694071 SHA1 9786bfdac4135b82d07d54440101b69927eec0f0 SHA256 48196fc4f0640d5490e8f9a0f63b7df2eada96b4918691c41de2c547e652e626
 EBUILD make-3.82.ebuild 1606 RMD160 0ca821d7d9d118549ec9053af3e63d6f71291511 SHA1 2a56d06c1f931b1de258015f4a3a6ed80df2b96c SHA256 4d9e45b4c3e14673f4fb9483db7307d94bbc4f0c1e0815c1e874d14e7cc9310c
-MISC ChangeLog 12260 RMD160 0aefe52359428e725081abefb26debbf5405c65a SHA1 68205909e1cd0f841f115daecc1725f8bf4bbee1 SHA256 34645d7385511fd73e3158f7714c510315f778bdd85430445388ad08834a02c8
+MISC ChangeLog 12497 RMD160 0d0238abaf1f283861791ae2b99a7f63da6ba9a6 SHA1 21672d145d4eb94cacbb4b547bf17993a4e4a68e SHA256 18753c86c960b198afc792e134ffaed1501a540f6a63c397b50ed9d657d105d0
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+T0yQACgkQX3X2B8XHTonF0wCgizmLt8KbZKfARj8CBsW3CbQ0
-dZcAnRopcLOXgJI2CKoXKYQmzwlHo2S6
-=XUHu
+iEYEARECAAYFAk/CGRIACgkQX3X2B8XHTol8XQCfb7tvIw9PHTDAud3+Zs1Gx4o6
+2bkAoIfOt+2688IJnWZgW5zKBznKYADr
+=kqYi
 -----END PGP SIGNATURE-----
